force-app/main/default/objects/Lead/fields/Accepted_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the customer agreed to the Terms and Conditions</description>
    <inlineHelpText>Checked if the customer agreed to the Terms and Conditions</inlineHelpText>
    <label>Accepted Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>