force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(NOT( IsConverted ), ROUND(NOW()-CreatedDate, 0), NULL)</formula>
    <inlineHelpText>Calculates the Age of the Lead from Created Date to Today</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>