force-app/main/default/objects/Lead/fields/Are_there_clear_red_flags__c.field-meta.xml
<CustomField>
    <fullName>Are_there_clear_red_flags__c</fullName>
    <description>Qualification Criteria - Are there clear red flags?</description>
    <inlineHelpText>Qualification Criteria - Are there clear red flags?</inlineHelpText>
    <label>Are there clear red flags?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>