force-app/main/default/objects/Lead/fields/Augusta_Associate_Name__c.field-meta.xml
<CustomField>
    <fullName>Augusta_Associate_Name__c</fullName>
    <inlineHelpText>If the lead comes in from the Augusta Support Center then there name will show here.</inlineHelpText>
    <label>Augusta Associate Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>