force-app/main/default/objects/Lead/fields/Automation_Control__c.field-meta.xml
<CustomField>
    <fullName>Automation_Control__c</fullName>
    <description>Controls whether an automated process skips certain items(Items controlled by Automation Control Type).</description>
    <label>Automation Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>