force-app/main/default/objects/Lead/fields/Automation_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Automation_Control_Type__c</fullName>
    <description>Describes what is to be skipped by the automated process. (&quot;Validation&quot;, &quot;Validation, Workflow&quot; etc)</description>
    <label>Automation Control Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>