force-app/main/default/objects/Lead/fields/Average_of_Planned_Units__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Planned_Units__c</fullName>
    <formula>IF( ISPICKVAL( Planned_units_in_the_next_12_months__c , &quot;1-10&quot;) , 5000, null)</formula>
    <label>Average of Planned Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>