force-app/main/default/objects/Lead/fields/Block_Online_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Block_Online_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Online Ordering</label>
    <type>Checkbox</type>
</CustomField>