force-app/main/default/objects/Lead/fields/Brand_Of_Distributor_Working_With__c.field-meta.xml
<CustomField>
    <fullName>Brand_Of_Distributor_Working_With__c</fullName>
    <description>Brand Of Distributor Currently Working With</description>
    <inlineHelpText>Please select as many as applicable</inlineHelpText>
    <label>Brand Of Distributor Working With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Reasons_For_Not_Working_With_SC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ferguson</fullName>
            </value>
            <value>
                <fullName>HH Gregg</fullName>
            </value>
            <value>
                <fullName>Home Depot</fullName>
            </value>
            <value>
                <fullName>Local merchant</fullName>
            </value>
            <value>
                <fullName>Lowes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Do not have a regularly used distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>