force-app/main/default/objects/Lead/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Sector</label>
    <referenceTo>Business_Sector__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>