force-app/main/default/objects/Lead/fields/Business_Sector_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector_Pardot__c</fullName>
    <formula>Business_Sector__r.Name</formula>
    <label>Business Sector - Pardot</label>
    <type>Text</type>
</CustomField>