force-app/main/default/objects/Lead/fields/Buying_process_comments__c.field-meta.xml
<CustomField>
    <fullName>Buying_process_comments__c</fullName>
    <description>Explain the customer&#39;s buying process</description>
    <inlineHelpText>Explain the customer&#39;s buying process</inlineHelpText>
    <label>Buying process comments</label>
    <type>TextArea</type>
</CustomField>