force-app/main/default/objects/Lead/fields/Call_Center_Support__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Support__c</fullName>
    <label>Call Center Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct from your company</fullName>
            </value>
            <value>
                <fullName>Warm transfer (your company and customer on the line)</fullName>
            </value>
            <value>
                <fullName>Direct from customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>