force-app/main/default/objects/Lead/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In order to track the effectiveness of marketing activities, please enter the influencing campaign that led to the procurement of this lead.  A campaign may be AM activities such as telephone Cold Calls or marketing activities such as a $1000 off postcard</inlineHelpText>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>