force-app/main/default/objects/Lead/fields/Clear_interest_in_the_next_step__c.field-meta.xml
<CustomField>
    <fullName>Clear_interest_in_the_next_step__c</fullName>
    <description>Qualification Criteria - Is there a clear interest in the step?</description>
    <inlineHelpText>Qualification Criteria - Is there a clear interest in the step?</inlineHelpText>
    <label>Clear interest in the next step?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>