force-app/main/default/objects/Lead/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <inlineHelpText>If the lead comes in from an Appliance Select Consultant then there name will show here.</inlineHelpText>
    <label>Consultant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>