force-app/main/default/objects/Lead/fields/Contact_Us_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Form__c</fullName>
    <description>How this lead is routed depends on the pick list value.</description>
    <inlineHelpText>How this lead is routed depends on the pick list value selected from the website searscommercial.com</inlineHelpText>
    <label>Contact Us Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am ready to place an order</fullName>
            </value>
            <value>
                <fullName>I want to learn more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>