force-app/main/default/objects/Lead/fields/Created_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_2__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date 2</label>
    <type>Date</type>
</CustomField>