force-app/main/default/objects/Lead/fields/Created_Date_FY__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_FY__c</fullName>
    <description>Used for Reporting Only</description>
    <formula>CreatedDate</formula>
    <label>Created Date FY</label>
    <type>Date</type>
</CustomField>