force-app/main/default/objects/Lead/fields/DEA_Number__c.field-meta.xml
<CustomField>
    <fullName>DEA_Number__c</fullName>
    <label>DEA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>