force-app/main/default/objects/Lead/fields/Do_we_understand_the_customer_s_buying_p__c.field-meta.xml
<CustomField>
    <fullName>Do_we_understand_the_customer_s_buying_p__c</fullName>
    <description>Qualification Criteria - Do we understand the customer&#39;s buying process?</description>
    <inlineHelpText>Qualification Criteria - Do we understand the customer&#39;s buying process?</inlineHelpText>
    <label>Understand customer&#39;s buying process?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>