force-app/main/default/objects/Lead/fields/Estimated_Annual_Appliance_spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Appliance_spend__c</fullName>
    <inlineHelpText>$1,500, $2,000. or $2500 per unit x # of units</inlineHelpText>
    <label>Estimated Annual Appliance spend?</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>