force-app/main/default/objects/Lead/fields/Estimated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opportunity_Amount__c</fullName>
    <description>The dollar amount of an opportunity is determined by the amount of the estimated spend for that specific bid, project, or actual business development opportunity.</description>
    <inlineHelpText>The dollar amount of an opportunity is determined by the amount of the estimated spend for that specific bid, project, or actual business development opportunity.</inlineHelpText>
    <label>Estimated Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>