force-app/main/default/objects/Lead/fields/Fusion_Score__c.field-meta.xml
<CustomField>
    <fullName>Fusion_Score__c</fullName>
    <label>SalesFusion Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>