force-app/main/default/objects/Lead/fields/GPO_ID__c.field-meta.xml
<CustomField>
    <fullName>GPO_ID__c</fullName>
    <inlineHelpText>Facility ID/ Number</inlineHelpText>
    <label>GPO ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>