force-app/main/default/objects/Lead/fields/Has_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Notes__c</fullName>
    <description>Flag for whether a lead has notes</description>
    <label>Has_Notes</label>
    <type>TextArea</type>
</CustomField>