force-app/main/default/objects/Lead/fields/Has_the_contact_information_been_verifie__c.field-meta.xml
<CustomField>
    <fullName>Has_the_contact_information_been_verifie__c</fullName>
    <label>Has the contact info been verified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>