force-app/main/default/objects/Lead/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Industry Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Industry_Segment__c.Business_Sector__c</field>
            <operation>equals</operation>
            <valueField>$Source.Business_Sector__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Industry_Segment__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>