force-app/main/default/objects/Lead/fields/Industry_Segment_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_Pardot__c</fullName>
    <formula>Industry_Segment__r.Name</formula>
    <label>Industry Segment - Pardot</label>
    <type>Text</type>
</CustomField>