force-app/main/default/objects/Lead/fields/Influencer_comments__c.field-meta.xml
<CustomField>
    <fullName>Influencer_comments__c</fullName>
    <description>Add comments regarding the conversation with the buying influencer</description>
    <inlineHelpText>Add comments regarding the conversation with the buying influencer</inlineHelpText>
    <label>Influencer comments</label>
    <type>TextArea</type>
</CustomField>