force-app/main/default/objects/Lead/fields/IST_Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>IST_Original_Owner__c</fullName>
    <description>WFR:  Hidden field that shows the Original Lead Owner from the IST Team</description>
    <inlineHelpText>Hidden field that shows the Original Lead Owner from the IST Team</inlineHelpText>
    <label>IST Original Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>