force-app/main/default/objects/Lead/fields/Lead_Conversion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Date_Time__c</fullName>
    <label>Lead Conversion Date Time</label>
    <type>DateTime</type>
</CustomField>