force-app/main/default/objects/Lead/fields/Lead_Source_for_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_for_Account__c</fullName>
    <description>Used for mapping Lead Source to Account Source</description>
    <label>Lead Source for Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>