force-app/main/default/objects/Lead/fields/Lead_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text__c</fullName>
    <description>Field to map Lead Source to Account Source</description>
    <label>Lead Source Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>