force-app/main/default/objects/Lead/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <description>Hidden Field used with Workflow rule to populate the Manager&#39;s email address</description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>