force-app/main/default/objects/Lead/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>used to capture the message from the form on kenmoredirect.com</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>