force-app/main/default/objects/Lead/fields/National_11_Digit_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>National_11_Digit_Employee_Number__c</fullName>
    <inlineHelpText>National 11 digit employee number as printed on pay check</inlineHelpText>
    <label>Store Associate Employee Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>