force-app/main/default/objects/Lead/fields/Next_steps_comments__c.field-meta.xml
<CustomField>
    <fullName>Next_steps_comments__c</fullName>
    <description>Add comments regarding the next steps</description>
    <inlineHelpText>Add comments regarding the next steps</inlineHelpText>
    <label>Next steps comments</label>
    <type>TextArea</type>
</CustomField>