force-app/main/default/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes Section or description or detail pertaining to the lead.</description>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>