force-app/main/default/objects/Lead/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Used for leadGenius imports</description>
    <label>Number of Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>