force-app/main/default/objects/Lead/fields/Old_Account_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Activity_Date__c</fullName>
    <label>Old Account Activity Date</label>
    <type>Date</type>
</CustomField>