force-app/main/default/objects/Lead/fields/Old_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Activity_Date__c</fullName>
    <description>Old Activity Date was created for the Account cleanup lead Campaigns.</description>
    <label>Old Activity Date</label>
    <type>Date</type>
</CustomField>