force-app/main/default/objects/Lead/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Select the type of opportunity (project or flow business) that will created after the lead is converted.
Commercial Project Business: The start date, number of units, AND price have all been defined.
Commercial Flow Business: Any business that doesn&#39;t</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial - Project</fullName>
            </value>
            <value>
                <fullName>Commercial - Flow Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>