force-app/main/default/objects/Lead/fields/Pardot_Marketing_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Marketing_Filter__c</fullName>
    <description>Used to identify leads from custom lists for dynamic lists in Pardot</description>
    <label>Pardot Marketing Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>