force-app/main/default/objects/Lead/fields/Planned_units_in_the_next_12_months__c.field-meta.xml
<CustomField>
    <fullName>Planned_units_in_the_next_12_months__c</fullName>
    <description>How many units/houses do you (plan to build / have under management) in next 12 months?</description>
    <inlineHelpText>How many units/houses do you (plan to build / have under management) in next 12 months?</inlineHelpText>
    <label>Planned units in the next 12 months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-300</fullName>
            </value>
            <value>
                <fullName>300+</fullName>
            </value>
            <value>
                <fullName>No info available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>